<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/pure_white_color">

    <ImageView
        android:id="@+id/iv_top"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:scaleType="fitXY"
        android:src="@drawable/login_bg_image"/>

    <LinearLayout
        android:id="@+id/ll_weixin_login"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@id/iv_top"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="@drawable/weixin_login_background"
        android:clickable="true"
        android:elevation="5dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/login_icon_weixin"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/weixin_login"
            android:textColor="@color/pure_white_color"
            android:textSize="16sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_weixin_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">

        <com.rey.material.widget.CheckBox
            android:id="@+id/material_check_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/read_and_agree"/>

        <TextView
            android:id="@+id/tv_user_protocol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:clickable="true"
            android:text="@string/user_protocol"
            android:textColor="@color/warning_color"/>

    </LinearLayout>

</RelativeLayout>