<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/pure_white_color"
              android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:background="@color/pure_white_color"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/pure_white_color">

        <LinearLayout
            android:id="@+id/ll_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:clickable="true"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="16dp"
                android:layout_gravity="center_vertical"
                android:scaleType="centerCrop"
                android:src="@drawable/icon_return"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/close"
                android:textSize="16sp"/>

        </LinearLayout>

        <ImageView
            android:id="@+id/iv_user_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:scaleType="centerCrop"
            android:src="@drawable/home_icon_us"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/tv_bar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/app_name"
            android:textColor="@color/main_text_color"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <ImageView
            android:id="@+id/iv_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:clickable="true"
            android:scaleType="centerCrop"
            android:src="@drawable/icon__share"/>

        <TextView
            android:id="@+id/tv_cost_record"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:clickable="true"
            android:text="消费记录"
            android:textColor="@color/main_text_color"
            android:textSize="16sp"
            android:visibility="gone"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:src="@drawable/invite_icon_images"/>

        <LinearLayout
            android:id="@+id/ll_invite_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="150dp"
            android:clickable="true"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_invite_num1"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@color/colorBlack"
                android:digits="@string/filter_vcode"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/main_color"
                android:textSize="25sp"/>

            <EditText
                android:id="@+id/et_invite_num2"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:background="@color/colorBlack"
                android:digits="@string/filter_vcode"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/main_color"
                android:textSize="25sp"/>

            <EditText
                android:id="@+id/et_invite_num3"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:background="@color/colorBlack"
                android:digits="@string/filter_vcode"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/main_color"
                android:textSize="25sp"/>

            <EditText
                android:id="@+id/et_invite_num4"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:background="@color/colorBlack"
                android:digits="@string/filter_vcode"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/main_color"
                android:textSize="25sp"/>

            <EditText
                android:id="@+id/et_invite_num5"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:background="@color/colorBlack"
                android:digits="@string/filter_vcode"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/main_color"
                android:textSize="25sp"/>

            <EditText
                android:id="@+id/et_invite_num6"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:background="@color/colorBlack"
                android:digits="@string/filter_vcode"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/main_color"
                android:textSize="25sp"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_invite_num"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="40dp"
            android:text="输入好友的邀请码，即可获赠30个娃娃币"
            android:textColor="@color/main_text_color"
            android:textSize="16sp"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/tv_has_exchange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:text="已兑换"
        android:textColor="@color/seventh_text_color"
        android:textSize="20sp"
        android:visibility="gone"/>

    <Button
        android:id="@+id/btn_exchange"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:background="@drawable/btn_background_invite_num_exchange_enable"
        android:enabled="false"
        android:text="立即兑换"
        android:textColor="@color/pure_white_color"
        android:textSize="18sp"
        android:visibility="visible"/>

    <Button
        android:id="@+id/btn_invite_more"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:background="@drawable/weixin_login_background"
        android:text="邀请好友获得更多奖励"
        android:visibility="gone"/>

</LinearLayout>